--- a/style.css
+++ b/style.css
@@ -1,17 +1,36 @@
 body {
-    background-color: #4F4F4F
+    background-color: #4F4F4F;
+    color: white;
+    
+}
+
+h1 {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 50px;
+    margin-top: 50px;
+}
+
+footer {
+    text-align:center;
+    position: end;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+    margin-top: 50px;
 }
 
 .buttonbox {
     background-color: #696969;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    padding: 50px;
+    padding: 15px;
     margin: 20px;
     border-radius: 8px;
-    gap: 50px;
+    gap: 20px;
     border: solid white 4px;
 }
 
@@ -29,8 +48,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 50px;
-    margin-top: 50px;
     font-size: 20px;
 
 }
