--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    background-color: #4F4F4F;
-    color: white;
+    background-color: white;
+    color: black;
     
 }
 
@@ -22,7 +22,7 @@ footer {
 }
 
 .buttonbox {
-    background-color: #696969;
+    background-color: white;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -35,16 +35,16 @@ footer {
 }
 
 .btn {
-    padding: 25px;
-    padding-bottom: 40px;
-    height: 50px;
-    width: 200px;
-    border-radius: 100px;
+    padding: 50px;
+    height: 100px;
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
    
 }
 
 .scoreboard {
-    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -53,6 +53,12 @@ footer {
 }
 
 a {
-    color:white;
+    color:black;
     text-decoration: none
+}
+
+.userchoiceimage {
+    height: 50px;
+    width: 50px;
+   
 }
