--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    background-color: white;
-    color: black;
+    background-color: rgb(216, 216, 216);
+    color: rgb(49, 49, 49)
     
 }
 
@@ -14,15 +14,15 @@ h1 {
 
 footer {
     text-align:center;
-    position: end;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 2.5rem;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 .buttonbox {
-    background-color: white;
+    background-color: rgb(216, 216, 216);
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -31,7 +31,6 @@ footer {
     margin: 20px;
     border-radius: 8px;
     gap: 20px;
-    border: solid white 4px;
 }
 
 .btn {
@@ -53,8 +52,8 @@ footer {
 }
 
 a {
-    color:black;
-    text-decoration: none
+    color: rgb(49, 49, 49);
+    text-decoration: none;
 }
 
 .userchoiceimage {
