--- a/style.css
+++ b/style.css
@@ -1,24 +1,24 @@
 body {
     background-color: rgb(216, 216, 216);
-    color: rgb(49, 49, 49)
-    
+    color: rgb(49, 49, 49);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 h1 {
     display: flex;
     justify-content: center;
     text-align: center;
-    margin-bottom: 50px;
-    margin-top: 50px;
+    margin-bottom: 40px;
+    margin-top: 20px;
 }
 
 footer {
-    text-align:center;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 2.5rem;
-    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    text-align:flex-end;
+    margin-top: auto;
 }
 
 .buttonbox {
@@ -29,7 +29,6 @@ footer {
     align-items: center;
     padding: 15px;
     margin: 20px;
-    border-radius: 8px;
     gap: 20px;
 }
 
@@ -48,7 +47,8 @@ footer {
     justify-content: center;
     align-items: center;
     font-size: 20px;
-
+    flex-wrap: wrap;
+    margin: 10px;
 }
 
 a {
@@ -70,10 +70,14 @@ h2 {
 .score {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
+    padding-bottom: auto;
+    margin: 10px;
 }
 
 .pointscore {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    flex-wrap: wrap;
 }
